HMS-344 Suppressed discount and price messaging when discount is 100%

--- a/ecommerce/static/sass/partials/views/_coupon_offer.scss
+++ b/ecommerce/static/sass/partials/views/_coupon_offer.scss
@@ -206,6 +206,7 @@
                 }
                 .image-container {
                     position: relative;
+                    margin-bottom: 10px;
                 }
             }
         }
