HMS-354 General styling, fonts and logo

--- a/ecommerce/static/sass/partials/components/_navbar.scss
+++ b/ecommerce/static/sass/partials/components/_navbar.scss
@@ -19,7 +19,9 @@
   border-radius: 0;
 
   // Add our own border
-  border-bottom: $navbar-border-bottom-width solid palette(primary, accent);
+  .container {
+    border-bottom: $navbar-border-bottom-width solid palette(secondary, accent);
+  }
 
   // Vertically center the logo
   .navbar-brand {
