--- a/ecommerce/templates/coupons/_offer_error.html
+++ b/ecommerce/templates/coupons/_offer_error.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="depth depth-2 message-error">
                 <h3>{{ error }}</h3>
-                {% trans "If you need assistance, contact edX support." %}
+                <p>{% trans "If you need assistance, contact edX support." %}</p>
             </div>
         </div>
     </div>
