--- a/ecommerce/static/sass/base/_base.scss
+++ b/ecommerce/static/sass/base/_base.scss
@@ -5,6 +5,13 @@ html {
   font-size: 16px;
 }
 
+body {
+  background-color: white;
+  p {
+    font-family: "AvenirLTStd-Book", sans-serif;
+  }
+}
+
 a {
   &:hover,
   &:focus {
@@ -38,7 +45,11 @@ a {
   border-top: 4px solid #B20610;
   h3 {
     margin-bottom: 10px;
+    font-family: "AvenirLTStd-Book", sans-serif;
     font-weight: bold;
+  }
+  p {
+    margin-bottom: 0;
   }
 }
 
