HMS-354 User dropdown suppressed on some pages

--- a/ecommerce/static/sass/base/main.scss
+++ b/ecommerce/static/sass/base/main.scss
@@ -25,6 +25,7 @@
 @import 'components/buttons';
 @import 'components/navbar';
 @import 'components/footer';
+@import 'components/base_navbar';
 
 // views
 // --------------------
