HMS-354 User dropdown HMX styling cleanup

--- a/ecommerce/templates/courses/course_app.html
+++ b/ecommerce/templates/courses/course_app.html
@@ -33,9 +33,8 @@
                         <li class="btn-group user-menu">
                             <button type="button" class="btn btn-default hidden-xs main-btn nav-button"
                                     onclick="window.open('{{ lms_dashboard_url }}');">
-                                <i class="icon fa fa-home" aria-hidden="true"></i>
                                 <span class="sr-only">{% trans "Dashboard for:" %}</span>
-                                {{ user.username }}
+                                My Account
                             </button>
                             <button type="button" class="btn btn-default dropdown-toggle hidden-xs nav-button"
                                     data-toggle="dropdown"
