HMS-354 Changed contact line

--- a/ecommerce/templates/coupons/_offer_error.html
+++ b/ecommerce/templates/coupons/_offer_error.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="depth depth-2 message-error">
                 <h3>{{ error }}</h3>
-                <p>{% trans "If you need assistance, contact edX support." %}</p>
+                <p>{% trans "If you need assistance, contact onlinelearning@hms.harvard.edu." %}</p>
             </div>
         </div>
     </div>
