HMS-354 Changed studio course name to ecommerce name on basket page

--- a/ecommerce/templates/oscar/basket/partials/basket_content.html
+++ b/ecommerce/templates/oscar/basket/partials/basket_content.html
@@ -29,7 +29,7 @@
                                 <img class="thumbnail" src="{{ line_data.image_url }}" alt="{{ line_data.course_name }}"/>
                             </div>
                             <div class="col-md-5 col-sm-12">
-                                <p class="course_name">{{ line_data.course_name }} - {{ line_data.course_key.org }}</p>
+                                <p class="course_name">{{ line_data.ecommerce_name }} - {{ line_data.course_key.org }}</p>
                                 <p class="course_description">{{ line_data.course_short_description }}</p>
                             </div>
                             {% if line_data.enrollment_code %}
