HMS-354 Activation message page changes

--- a/ecommerce/static/sass/base/_base.scss
+++ b/ecommerce/static/sass/base/_base.scss
@@ -56,6 +56,10 @@ a {
     font-family: "AvenirLTStd-Book", sans-serif;
     font-weight: bold;
   }
+  ol {
+    margin-bottom: 0;
+    font-family: "AvenirLTStd-Book", sans-serif;
+  }
   p {
     margin-bottom: 0;
   }
