--- a/ecommerce/templates/coupons/_offer_error.html
+++ b/ecommerce/templates/coupons/_offer_error.html
@@ -11,7 +11,15 @@
     <div id="offer">
         <div class="container">
             <div class="depth depth-2 message-error">
-                <h3>{{ error }}</h3>
+                <h3>
+                    {{ error }}
+                    {% if account_activation_error %}
+                    <ol>
+                        <li>{{ step_one }}</li>
+                        <li>{{ step_two }}</li>
+                    </ol>
+                    {% endif %}
+                </h3>
                 <p>{% trans "If you need assistance, contact onlinelearning@hms.harvard.edu." %}</p>
             </div>
         </div>
