--- a/ecommerce/static/sass/partials/utilities/_variables.scss
+++ b/ecommerce/static/sass/partials/utilities/_variables.scss
@@ -43,6 +43,7 @@ $breadcrumb-bg: white;
 // Offer landing page
 $gray-transparent: rgba(255, 255, 255, 0.5);
 $offer-page-price-blue: #0ea6ec;
+$offer-page-price-teal: #00a69c;
 $offer-page-white: white;
 $offer-page-gray: gray;
 $dark-blue-shadow: rgba(12, 87, 126, 0.75);
