--- a/ecommerce/static/sass/partials/views/_coupon_offer.scss
+++ b/ecommerce/static/sass/partials/views/_coupon_offer.scss
@@ -183,7 +183,7 @@
                 .course-new-price {
                     text-align: center;
                     font-weight: bold;
-                    color: $offer-page-price-blue;
+                    color: $offer-page-price-teal;
                 }
                 .course-start {
                     margin-bottom: 40px;
