--- a/ecommerce/templates/edx/base.html
+++ b/ecommerce/templates/edx/base.html
@@ -31,6 +31,9 @@
     {% include 'edx/partials/_staff_navbar.html' %}
 {% endblock navbar %}
 
+{% block dropdown %}
+{% endblock dropdown %}
+
 {% block content %}
 {% endblock content %}
 
