--- a/ecommerce/static/sass/base/_base.scss
+++ b/ecommerce/static/sass/base/_base.scss
@@ -31,6 +31,10 @@ a {
   background-color: $container-bg;
 }
 
+.dropdown-container {
+  padding-top: 20px;
+}
+
 .sr {
   @extend .sr-only;
 }
@@ -50,11 +54,13 @@ a {
 }
 
 .message-error {
-  border-top: 4px solid #B20610;
   h3 {
     margin-bottom: 10px;
+    padding-left: 20px;
+    border-bottom: 2px solid #bdb6b2;
+    color: #A51C30;
     font-family: "AvenirLTStd-Book", sans-serif;
-    font-weight: bold;
+    font-size: 30px;
   }
   ol {
     margin-bottom: 0;
@@ -62,16 +68,19 @@ a {
   }
   p {
     margin-bottom: 0;
+    padding: 20px;
+    span {
+      color: #A51C30;
+    }
   }
 }
 
 .depth {
-  padding: 1.25rem 1.25rem;
+  // padding: 1.25rem 1.25rem;
 }
 
 .depth-2 {
-  background: #fcfcfc;
-  box-shadow: 0 1px 2px 1px rgba(167, 164, 164, 0.25);
+
 }
 
 .depth--3 {
