--- a/ecommerce/templates/coupons/_offer_error.html
+++ b/ecommerce/templates/coupons/_offer_error.html
@@ -7,6 +7,12 @@
     {% include 'edx/partials/_student_navbar.html' %}
 {% endblock navbar %}
 
+{% block dropdown %}
+    <div class="container dropdown-container">
+        {% include 'edx/partials/_account_dropdown.html' %}
+    </div>
+{% endblock dropdown %}
+
 {% block content %}
     <div id="offer">
         <div class="container">
@@ -20,7 +26,7 @@
                     </ol>
                     {% endif %}
                 </h3>
-                <p>{% trans "If you need assistance, contact onlinelearning@hms.harvard.edu." %}</p>
+                <p>{% trans "If you need assistance, contact <span>onlinelearning@hms.harvard.edu</span>." %}</p>
             </div>
         </div>
     </div>
