--- a/ecommerce/templates/edx/partials/_account_dropdown.html
+++ b/ecommerce/templates/edx/partials/_account_dropdown.html
@@ -4,14 +4,9 @@
     {% if user.is_authenticated %}
         <li class="btn-group user-menu">
             <button type="button" class="btn btn-default hidden-xs main-btn nav-button"
-                    onclick="window.open('{{ lms_dashboard_url }}');">
-                <span class="sr-only">{% trans "Dashboard for:" %}</span>
+                    data-toggle="dropdown" aria-haspopup="true">
                 My Account
-            </button>
-            <button type="button" class="btn btn-default dropdown-toggle hidden-xs nav-button"
-                    data-toggle="dropdown"
-                    aria-haspopup="true">
-                <span class="caret"></span>
+                <span class="fa fa-sort-desc" aria-hidden="true"></span>
                 <span class="sr-only">{% trans "Toggle Dropdown" %}</span>
             </button>
             <ul class="dropdown-menu" aria-expanded="false">
@@ -22,6 +17,5 @@
     {% else %}
         <a class="btn btn-primary navbar-btn hidden-xs" href="{% url 'login' %}">{% trans "Login" %}</a>
         <li class="visible-xs"><a class="nav-link" href="{% url 'login' %}">{% trans "Login" %}</a></li>
-        </a>
     {% endif %}
 </ul>
