--- a/ecommerce/templates/courses/menu_options.html
+++ b/ecommerce/templates/courses/menu_options.html
@@ -7,11 +7,12 @@
     <li class="{{ additional_class }}">
         <a class="nav-link" href="{{ lms_dashboard_url }}">{% trans "Student Dashboard" %}</a>
     </li>
-    <li class="{{ additional_class }}">
-        <a class="nav-link" href="{% url 'courses:app' '' %}">{% trans "Course Admin Tool" %}</a>
-    </li>
-    <li class="{{ additional_class }}"
-        ><a class="nav-link" href="{% url 'dashboard:index' %}">{% trans "E-Commerce Dashboard" %}</a>
-    </li>
-    <li class="divider {{ additional_class }}"></li>
+    {% if user.is_staff %}
+        <li class="{{ additional_class }}">
+            <a class="nav-link" href="{% url 'courses:app' '' %}">{% trans "Course Admin Tool" %}</a>
+        </li>
+        <li class="{{ additional_class }}"
+            ><a class="nav-link" href="{% url 'dashboard:index' %}">{% trans "E-Commerce Dashboard" %}</a>
+        </li>
+    {% endif %}
 {% endblock additional_options %}
