HMS-434 Cybersource email v4

--- a/ecommerce/templates/customer/emails/commtype_credit_receipt_body_alternative.html
+++ b/ecommerce/templates/customer/emails/commtype_credit_receipt_body_alternative.html
@@ -14,7 +14,7 @@
             {% blocktrans with course_title=course_title %}
               This confirms your successful payment for enrollment in {{ course_title }}.
               <br>
-              A receipt for this payment has been sent to {{ cybersource_email }}.
+              A receipt for this payment has been sent to the email address entered on the payment page.
             {% endblocktrans %}
           </p>
 
